--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=`, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form 1</title>
     <style>
     </style>
    
